force-app/main/default/objects/Forrester_SHIR_CASE_UNPAID_INVOICES__x/Forrester_SHIR_CASE_UNPAID_INVOICES__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_UNPAID_INVOICES</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_UNPAID_INVOICES</externalName>
    <label>Forrester_SHIR_CASE_UNPAID_INVOICES</label>
    <pluralLabel>Forrester_SHIR_CASE_UNPAID_INVOICES</pluralLabel>
</CustomObject>