force-app/main/default/objects/Forrester_SHIR_CASE_UNPAID_INVOICES__x/fields/AGREEMENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_RECID__c</fullName>
    <description>AGREEMENT_RECID</description>
    <externalDeveloperName>AGREEMENT_RECID</externalDeveloperName>
    <label>Agreement</label>
    <length>12</length>
    <referenceTo>Forrester_SHIR_AGREEMENT_VIEW__x</referenceTo>
    <relationshipLabel>Forrester_SHIR_CASE_UNPAID_INVOICES</relationshipLabel>
    <relationshipName>Forrester_SHIR_CASE_UNPAID_INVOICES</relationshipName>
    <type>ExternalLookup</type>
</CustomField>