force-app/main/default/objects/Forrester_SHIR_CASE_UNPAID_INVOICES__x/fields/DOM_FOREIGN__c.field-meta.xml
<CustomField>
    <fullName>DOM_FOREIGN__c</fullName>
    <description>DOM_FOREIGN</description>
    <externalDeveloperName>DOM_FOREIGN</externalDeveloperName>
    <label>Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>