force-app/main/default/objects/Forrester_SHIR_CASE_UNPAID_INVOICES__x/fields/DUE_DATE__c.field-meta.xml
<CustomField>
    <fullName>DUE_DATE__c</fullName>
    <description>DUE_DATE</description>
    <externalDeveloperName>DUE_DATE</externalDeveloperName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>