force-app/main/default/objects/Forrester_SHIR_CASE_UNPAID_INVOICES__x/fields/INVOICE_LINE_ITEM_AMT__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_LINE_ITEM_AMT__c</fullName>
    <description>INVOICE_LINE_ITEM_AMT</description>
    <externalDeveloperName>INVOICE_LINE_ITEM_AMT</externalDeveloperName>
    <label>Invoice Line Item Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>