force-app/main/default/objects/Forrester_SHIR_CASE_UNPAID_INVOICES__x/fields/INVOICE_RECID__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_RECID__c</fullName>
    <description>INVOICE_RECID</description>
    <externalDeveloperName>INVOICE_RECID</externalDeveloperName>
    <label>Invoice Recid</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>